# lucida-rs

./: Cargo.toml
api/: Cargo.toml
api/src/: lib.rs
downloader/: Cargo.toml
downloader/src/: main.rs
