[package]
name = "lucida-downloader"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
console = "0.15.11"
dialoguer = "0.11.0"
lucida-api = { version = "0.1.0", path = "../api" }
tokio = { version = "1.44.1", features = ["fs", "macros", "rt-multi-thread"] }
